     69- isprime(n,1) no longer uses APRCL for large prime divisors of n-1
         (pure Pocklington-Lehmer-Selfridge); use primecert(n).
     70- getrand() encoded results in a way that depended on 32bit/64bit arch
     71- thue(p, rhs) is much easier when p has no real roots; don't insist
         on computing bnfinit(p) in this case [#2003]
     72- use Newton in expm1
     73- change rnfpolredabs so that it outputs a canonical polynomial. As a
         result, the function is no longer Obsolete.
     74- allow polrecip(scalar x) -> x
     75- extend factormod(f, D) for general finite fields: D = p prime
         [over Fp], D = [T,p] (over Fp[x]/(T)), or omited [over field of
         definition of f]. Same for polrootsmod.
     76- factorff and polrootsff are now obsolete. Use factormod/polrootsmod
     77- Ser(s, 'x, d) now always return a series with d significant terms.
         It used to return a t_SER s in 'x verbatim and to use all given
         coefficients for a t_VEC/t_COL. Only if d is explicitly given,
         no change for Ser(s,'x)
     78- elllocalred, ellap, ellcard, ellissupersingular, ellgroup(,0):
         allow models which are not p-integral
     79- ellgroup: allow E over number field
     80- factorback([;]) is now invalid [ [;] is not the empty factorization,
         factor(1) = matrix(0,2) is ]
     81- cmpiu / cmpiu, equaliu / equalui : no longer assume that t_INT argument
         is non-negative
     82- rename diviu_rem -> absdiviu_rem, udiviu_rem -> uabsdiviu_rem,
         udivui_rem -> uabsdivui_rem

  Removed
      1- file 'MACHINES' (no longer maintained)
      2- useless argument nf in ZC_nfval, ZC_nfvalrem, pr_equal, ZC_prdvd
      3- useless flag argument in polrootsmod
      4- [libpari] useless function Flx_roots_naive; rootmod and rootmod2
         are now an alias for polrootsmod (both have been deprecated for years)
         rootmod0 is just as obsolete.